web/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: roboshop
spec:
  type: LoadBalancer
  selector:
    app: web
    project: roboshop
    tier: web
  ports:
  - protocol: TCP
    port: 80 #service-port
    targetPort: 80 #container-port
